--- a/style.css
+++ b/style.css
@@ -43,7 +43,12 @@ body {
     flex: 1 0 0%;
     font-family: gameover;
     font-size: 40px;
+    align-items: center;
+    border-radius: 4px;;
+    min-width: 150px;
+    border-color: darkgray;
 }
+
 
 .setup div{
     flex: 1 1 0%;
